--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ install:
   - ./bin/phpunit install
 
 script:
-  # There's no need to load data fixtures before running tests because the project
+  # There's no need to load data fixtures before running tests because the projects
   # repository already includes a test database with all the fixtures needed to run the tests.
   - ./bin/phpunit
   # This checks that the source code follows the Symfony Code Syntax rules.
