--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@symfony/webpack-encore": "^0.28.0",
     "bloodhound-js": "^1.2.3",
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap": "^4.5.0",
     "bootstrap-tagsinput": "^0.7.1",
-    "bootswatch": "^3.3.7",
+    "bootswatch": "^4.5.0",
+    "bs-custom-file-input": "^1.3.4",
     "core-js": "^3.0.0",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "highlight.js": "^9.12.0",
     "imports-loader": "^0.8.0",
     "jquery": "^3.5.1",
     "lato-font": "^3.0.0",
+    "moment": "^2.27.0",
     "node-sass": "^4.9.3",
+    "popper.js": "^1.16.1",
     "sass-loader": "^7.1.0",
+    "tempusdominus-bootstrap-4": "^5.1.2",
     "typeahead.js": "^0.11.1"
   },
   "private": true,
