--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "symfony/yaml": "5.1.*",
         "tgalopin/html-sanitizer-bundle": "^1.2",
         "twig/intl-extra": "^3.0",
-        "twig/markdown-extra": "^3.0"
+        "twig/markdown-extra": "^3.0",
+        "vich/uploader-bundle": "^1.14"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.2",
